# corpus

./: .gitignore  README.md  architecture.md  electron.d.ts  electron.js  electronPreload.js  next.config.js  package-lock.json  package.json  package_old.json  server.js  tailwind.config.ts  tsconfig.electron.json  tsconfig.json  tsconfig.web.json  vitest.config.mts
CPP/: CorpusAnalyzer.cpp  CorpusMetadata.h  DatabaseHandler.cpp  DatabaseHandler.h  JSONConvert.cpp  corpusManagerMain.cpp  corpusSummarizerMain.cpp  getProjectMetadata.cpp  getProjectTitles.cpp  patchCorpusName.cpp  postCorpusName.cpp  punctuation.h  startNewProject.cpp  testProgram  testProgram.cpp
R/: pos_tag_single_file.R
ServerControllers/: corpusEditsController.js  corpusManagerController.js  corpusSummarizerController.js  fileUploadsController.js  projectDataController.js
ServerRouter/: corpusEdits.js  corpusManager.js  corpusSummarizer.js  fileUploads.js  (+1 more)
native/CPP/: CMakeLists.txt  CorpusMetadata.h  DatabaseHandler.cpp  DatabaseHandler.h  JSONConvert.cpp  corpusManagerMain.cpp
native/CPP/DatabaseHandler/: Connection.cpp  DatabaseHandler.cpp  DatabaseHandler.h  ManageCorpusFiles.cpp  ManageCorpusQueries.cpp  ManageProjectQueries.cpp  ManageSubcorpusQueries.cpp  StmtGuard.cpp  StmtGuard.h  TransactionGuard.cpp  TransactionGuard.h
native/CPP/corpusAnalysis/: CorpusAnalyzer.h
native/CPP/executables/: corpusManager
native/CPP/executablesNew/: corpusManager
native/CPP/summarizer/: DatabaseSummarizer.cpp  EnumHelpers.cpp  EnumHelpers.h  SummarizerMetadata.h
native/CPP/wordStats/: WordStats.h
(+194 files in other folders)
